# Arrmate

./: .dockerignore  .env.example  .env.local.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOCKER_HUB.md  DOCKER_HUB_GUIDE.md  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  PUBLISHING.md  PUBLISHING_GUIDE.md  QUICKSTART.md  README.md  REBRANDING_COMPLETE.md  SECURITY.md  SERVICES.md  SUMMARY.md  deploy.sh  docker-compose.full.yml  docker-compose.ollama-amd.yml  docker-compose.ollama-nvidia.yml  docker-compose.prod.yml  docker-compose.yml  docker-setup.sh  publish-docker.ps1  publish-docker.sh  pyproject.toml  requirements.txt  verify-ready.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
compose/: arrmate.yml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: README.md  authentication.md  docker.md  index.html  quickstart.md  services.md  simplehomelab-traefik.md  web-ui.md
docs/dev/: implementation-summary.md  launch-checklist.md  next-steps.md  project-structure.txt
docs/plans/: 2026-03-06-security-remediation.md
docs/screenshots/: README.md
scripts/: dev-setup.sh
src/arrmate/auth/: __init__.py  dependencies.py  manager.py  notifications.py  plex_sso.py  rate_limit.py  session.py  user_db.py
src/arrmate/cache/: plex_cache.py
src/arrmate/clients/: audiobookshelf.py  base.py  base_companion.py  base_external.py  bazarr.py  discovery.py  huntarr.py  lastfm.py  lazylibrarian.py  lidarr.py  nzbget.py  openlibrary.py  plex.py  plex_tv.py  prowlarr.py  qbittorrent.py  radarr.py  readarr.py  readmeabook.py  sabnzbd.py  sonarr.py  tmdb.py  transcoder.py  transmission.py  whisparr.py
src/arrmate/config/: service_config.py  settings.py
src/arrmate/core/: command_parser.py  download_tracker.py  executor.py  intent_engine.py  models.py
src/arrmate/llm/: anthropic.py  (+5 more)
tests/: __init__.py  test_api.py  test_auth.py  test_models.py  test_plex_sso.py  test_rate_limit.py  test_transcoder.py
(+62 files in other folders)
