[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arrmate"
version = "0.1.0"
description = "ðŸ¤ Your AI companion for Sonarr, Radarr, and Lidarr - manage your media library with natural language"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Arrmate Contributors", email = "arrmate@example.com"}
]
license = {text = "MIT"}
keywords = ["sonarr", "radarr", "lidarr", "media-management", "natural-language", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "typer[all]>=0.9.0",
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.25.0",
    "ollama>=0.1.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx-mock>=0.1.0",
    "black>=23.12.0",
    "ruff>=0.1.8",
    "mypy>=1.7.0",
]
web = [
    "streamlit>=1.29.0",
]

[project.scripts]
arrmate = "arrmate.interfaces.cli.main:app"

[project.urls]
Homepage = "https://github.com/techbutton/arrmate"
Documentation = "https://github.com/techbutton/arrmate#readme"
Repository = "https://github.com/techbutton/arrmate"
Issues = "https://github.com/techbutton/arrmate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
